<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.dmcs.docscanner.SendFragment"
    tools:ignore="MergeRootFrame"
    android:background="@drawable/bg_send" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/send_title"
        android:id="@+id/title"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <!--<TextView-->
        <!--android:id="@+id/bluetoothshareButton"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal|center_vertical"-->
        <!--android:text="@string/send_via_bluetooth"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:textColor="@color/white"-->
        <!--android:background="@color/bluetooth_blue"-->
        <!--android:textStyle="bold"-->
        <!--android:padding="10dp"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:layout_marginRight="40dp"-->
        <!--android:width="200dp"-->
        <!--android:gravity="center"/>-->

    <!--<ImageButton-->
        <!--android:id="@+id/bluetoothshareIcon"-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_gravity="center_horizontal|center_vertical"-->
        <!--android:background="@drawable/bluetooth"-->
        <!--android:layout_marginBottom="31dp"-->
        <!--android:layout_marginLeft="100dp"/>-->

    <TextView
        android:id="@+id/mailshareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/send_via_mail_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:background="@color/mail_orange"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="40dp"
        android:width="200dp"
        android:gravity="center" />

    <ImageButton
        android:id="@+id/mailshareIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/mail"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="100dp"/>

    <TextView
        android:id="@+id/restartText"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/dark_red"
        android:text="@string/try_again_text"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="10dp"
        android:gravity="center" />

</FrameLayout>
